<resources>
    <string name="app_name">Prolific Library</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="delete_all">Delete All</string>
    <string name="save">Save</string>
    <string name="title_edit">Edit Title</string>
    <string name="checkout_book">Check out</string>
    <string name="dialog_msg">Enter your first name to checkout</string>
    <string name="faves">Favorites</string>
    <string name="deleted_books">Deleted</string>
    <string name="book_title_hint">Title</string>
    <string name="book_author_hint">Author</string>
    <string name="book_publisher_hint">Publisher</string>
    <string name="book_categories_hint">Categories</string>
    <string name="no_data_available">No Data Available</string>
    <string name="share">Share</string>
    <string name="edit_this">Edit</string>
    <string name="delete">Delete</string>
    <string name="welcome_text">Looks like it\'s your first time using Prolific Library</string>
    <string name="prompt_email">Email</string>
    <string name="enter_user_name">Name</string>
    <string name="action_submit">Submit</string>
    <string name="prolific_description">Prolific Library helps you curate a digital collection of books, record notes, and share with others.</string>
    <string name="enter_info_prompt">Looks like it\'s your first time \n Sign up for Prolific Library</string>
    <string name="join_prolific">Join Prolific Library!</string>
    <string name="error_message">Error</string>
    <string name="select_genre_prompt">Select your genres of interest</string>
    <string name="check_input_prompt">Make sure you have filled out all necessary fields.</string>
    <string name="add_note_hint">Add Note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reload">Reload</string>
    <string name="delete_all_warning">Delete all books?</string>
    <string name="delete_all_prompt">All items will be removed from the Prolific Library</string>
    <string name="return_book">Return</string>
    <!--<string name="first_run">Looks like it\'s your first time </string>-->
</resources>
